--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,14 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%= yield %>
+
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js?sensor=false" %>
+    <%= javascript_include_tag "https://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" %>
+
     <%= javascript_include_tag 'application' %>
     <%= cloudinary_js_config %>
+
+    <%= yield(:after_js) %>
+
   </body>
 </html>
