--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,8 +40,8 @@
 
   <div class="row">
     <div id="user_history" class="col-xs-12 col-md-8 text-center">
-      
-    </div>    
+      <p>user history to be implemented</p>
+    </div>
   </div>
 
 </div>
