--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,9 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
-
+#home_container {
+  margin-top: 100px;
+}
 .logo {
   margin-top: 70px;
   margin-bottom: 50px;
