--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id = "home_container">
   <div class="row">
     <div class="logo text-center">
         <%= image_tag "logo_name", size: "205x160", class: "avatar-extralarge" %>
