--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
-<div class="container">
+<div class="container" id = "user_container">
 
   <div class="row">
     <div id="profile" class="col-xs-12 col-md-2 text-center">
-      <ul>
+      <ul class = "list-unstyled">
         <li id="main-avatar">
-          <% if current_user.picture.nil? %>
+          <% if current_user.avatar.nil? %>
             <%= image_tag "http://placehold.it/80x80", class: "avatar-extralarge" %>
           <% else %>
-            <%= image_tag current_user.picture, class: "avatar-extralarge " %>
+            <%= image_tag current_user.avatar, class: "avatar-extralarge " %>
           <% end %>
         </li>
         <li><p>Dr<%= @user.first_name %> <%= @user.last_name %></p></li>
@@ -24,7 +24,7 @@
 
   <div class="row">
     <div id="user_content" class="col-xs-12 col-md-8 text-center">
-      <ul>
+      <ul class = "list-unstyled">
         <li><p><%= @user.presentation %></p></li>
         <hr>
         <li><%=@user.education %></li>
