--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,8 @@
  * ------------------------------------- */
 #home_container {
   margin-top: 100px;
+  // background-image : url(/assets/white-bg.jpg);
+  // background-size: cover;
 }
 .logo {
   margin-top: 70px;
