--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,10 @@
     <div id="profile" class="col-xs-12 col-md-2 text-center">
       <ul>
         <li id="main-avatar">
-          <% if current_user.picture.nil? %>
+          <% if current_user.avatar.nil? %>
             <%= image_tag "http://placehold.it/80x80", class: "avatar-extralarge" %>
           <% else %>
-            <%= image_tag current_user.picture, class: "avatar-extralarge " %>
+            <%= image_tag current_user.avatar, class: "avatar-extralarge " %>
           <% end %>
         </li>
         <li><p>Dr<%= @user.first_name %> <%= @user.last_name %></p></li>
