favicon and home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,7 +16,18 @@
 }
 .form-control {
     min-width: 0;
-    width: 200px !important;
     border-style : none;
-    color: $gray
+}
+.search{
+  padding-bottom: 130px;
+}
+.how {
+    background: #F9F9FA;
+    border-top: 1px solid #EAEAEB;
+    border-bottom: 1px solid #EAEAEB;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    bottom: 0;
+    color : $gray;
+    font-size: 12px;
 }
