--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag "logo_name", size: "205x160", class: "" %>
     </div>
     <div class="catchline text-center">
-      <h3>Et le replacement entre médecins n'est plus un soucis</h3>
+      <h3>Et le replacement entre médecins n'est plus un souci</h3>
     </div>
     <div class="search col-xs-12">
       <form action="/search" class="form-inline text-center">
