--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,15 +5,17 @@
   <% end %>
 
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs">
+  <div class="navbar-wagon-right">
 
     <!-- Search form -->
-    <form action="/users" class="navbar-wagon-search">
-      <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Type a location">
-      <button type="submit" class="navbar-wagon-search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-    </form>
+    <div id="search-div-navbar" class="hidden-xs">
+      <form action="/users" class="navbar-wagon-search">
+        <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Type a location">
+        <button type="submit" class="navbar-wagon-search-btn">
+          <i class="fa fa-search"></i>
+        </button>
+      </form>
+    </div>
 
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
@@ -26,24 +28,24 @@
             <div class="badge badge-grey">0</div>
           <%# else %>
             <%# if current_user.bikes.first.bookings.where(status: "pending").count == 0 %>
-              <div class="badge badge-grey">
+<!--               <div class="badge badge-grey">
                 <%#= current_user.bikes.first.bookings.where(status: "pending").count %>
               </div>
             <%# else %>
               <div class="badge badge-orange">
                 <%#= current_user.bikes.first.bookings.where(status: "pending").count %>
-              </div>
+              </div> -->
             <%# end %>
-          <% end %>
+          <%# end %>
         </div>
       <% end %>
 
       <!-- Profile picture and dropdown -->
-      <div class="navbar-wagon-item">
+      <div class="navbar-wagon-item hidden-xs">
         <div class="dropdown">
-          <% if policy(User).create? %>
+
             <% if current_user.avatar.nil? %>
-              <%= image_tag 'http://placehold.it/30x30', class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+              <%= image_tag 'placeholder_pic.png', class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
             <% else %>
               <%= image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
             <% end %>
@@ -64,9 +66,17 @@
                 <% end %>
               </li>
             </ul>
-          <% end %>
+
         </div>
       </div>
+
+    <% else %>
+
+      <!-- Login text link -->
+      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+    <% end %>
+
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
