--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="navbar-wagon-right hidden-xs">
 
     <!-- Search form -->
-    <form action="/users" class="navbar-wagon-search">
+    <form action="/search" class="navbar-wagon-search">
       <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Type a location">
       <button type="submit" class="navbar-wagon-search-btn">
         <i class="fa fa-search"></i>
