--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -9,6 +9,10 @@
   padding-top: 5em;
   padding-bottom: 5em;
 }
+.no-side-padding {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
 
 // Backgrounds
 .bg-black {
