--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -16,11 +16,14 @@
 }
 #search-filter label {
   font-family: Raleway;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: lighter;
 }
 #left-filter {
-  padding: 0 10px 0 30px;
+  padding: 0 30px 0 30px;
+}
+#right-filter {
+  padding: 0 30px 0 30px;
 }
 .search-input {
   flex: 0 1 300px;
@@ -34,4 +37,24 @@
   margin: 5px;
   font-size: 14px;
   outline: none;
+}
+#filter-button {
+  margin-top: 5px;
+}
+.filter-option {
+  background-color: $gray-lighter;
+  transition: all 0.15s ease;
+  line-height: 40px;
+  font-weight: lighter;
+  color: #666666;
+  border: 1px solid #E6E6E6;
+  border-radius: 5px;
+  padding: 0 10px;
+  margin: 5px;
+  font-size: 14px;
+  outline: none;
+  height: 40px;
+}
+.form-group {
+  display: inline;
 }
