--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -4,39 +4,79 @@
       <div id="search-filter">
         <form action="/index">
           <div class="row">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-4">
               <div id="left-filter">
                 <div class="row">
-                      <div class="form-group form-inline">
-                        <!-- <label for="location">Lieu</label> -->
-                        <input class="search-input" placeholder="Ville ou adresse..." name="location" id="user_input_autocomplete_address" style="width: 45%;">
-                        <!-- <label for="speciality">Spécialité</label> -->
-                        <input type="select" class="search-input" placeholder="Spécialité" name="speciality" style="width: 45%;">
-                      </div>
+
+                  <!-- <label for="location">Lieu</label> -->
+                  <input class="search-input" placeholder="Ville ou adresse..." name="location" id="user_input_autocomplete_address">
+
                 </div>
                 <div class="row">
-                      <div class="form-group form-inline">
-                        <!-- <label for="location">Dates</label> -->
-                        <input type="text" class="search-input datepick" placeholder="Date de début" name="start_date" style="width: 45%;">
-                        <input type="text" class="search-input datepick" placeholder="Date de fin" name="end_date" style="width: 45%;">
-                      </div>
+
+                  <!-- <label for="speciality">Spécialité</label> -->
+                  <input type="select" class="search-input" placeholder="Spécialité" name="speciality">
+
+                </div>
+                <div class="row">
+
+                  <!-- <label for="location">Dates</label> -->
+                  <input type="text" class="search-input datepick" placeholder="Date de début" name="start_date">
+                  <input type="text" class="search-input datepick" placeholder="Date de fin" name="end_date">
+
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
-              <input type="checkbox" label="Hébergement" name="housing">
-              <input type="checkbox" label="Secrétariat" name="secretary">
-              <input type="checkbox" label="Visites à domicile" name="home_visits">
-              <input type="select" label="Secteur / Convention" name="sector">
-              <div id="the_slider">
-                <input type="hidden" id="min-com" name="min-com">
-                <input type="hidden" id="max-com" name="max-com">
+            <div class="col-xs-12 col-sm-8">
+              <div id="right-filter">
+                <div class="row">
+
+                </div>
+                <div class="row">
+
+                </div>
+                <div class="row">
+                  <div class="col-xs-4 no-side-padding">
+                    <div id="convention" class="filter-option">
+                      <div class="form-group">
+                        <label>Convention </label>
+                        <select name="convention" class="search-input">
+                          <option value="">Tout</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-4 no-side-padding">
+                    <div id="housing" class="filter-option">
+                      <div class="form-group">
+                        <label for="housing">Hébergement </label>
+                        <input type="checkbox" name="housing" class="search-input">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-4 no-side-padding">
+                    <div id="secretary" class="filter-option">
+                      <div class="form-group">
+                        <label for="housing">Secrétariat </label>
+                        <input type="checkbox" name="housing" class="search-input">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div id="the_slider">
+                  <input type="hidden" id="min-com" name="min-com">
+                  <input type="hidden" id="max-com" name="max-com">
+                </div>
               </div>
             </div>
           </div>
+
           <div class="row">
             <div class="col-xs-12 text-center" id="filter-button">
-              <input type="submit" value="Filtrer" class="btn btn-primary" style="width: 33%;">
+              <input type="submit" value="Filtrer" class="btn btn-primary" id="filter-button" style="width: 33%;">
             </div>
           </div>
         </form>
