--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Remplarama</title>
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag 'favicon.gif'%>
+    <%= favicon_link_tag 'favicon.png'%>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -17,6 +17,8 @@
 
     <%= javascript_include_tag "https://maps.google.com/maps/api/js?sensor=false" %>
     <%= javascript_include_tag "https://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" %>
+
+
 
     <%= javascript_include_tag 'application' %>
     <%= cloudinary_js_config %>
