Filter design about OK

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <!-- Search form -->
     <div id="search-div-navbar" class="hidden-xs">
       <form action="/search" class="navbar-wagon-search">
-        <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Type a location">
+        <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Ville ou adresse">
         <button type="submit" class="navbar-wagon-search-btn">
           <i class="fa fa-search"></i>
         </button>
