--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
 @import "bootstrap-datepicker";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import 'jquery-ui/core.css';
+@import 'jquery-ui/datepicker.css';
+@import 'jquery-ui/theme.css';
 
 // Your CSS
 @import "layout/index";
