--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -13,6 +13,9 @@
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
+.no-padding-left {
+  padding-left: 0px !important;
+}
 
 // Backgrounds
 .bg-black {
