--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -18,6 +18,7 @@
   font-family: Raleway;
   font-size: 14px;
   font-weight: lighter;
+  margin-left: 5px;
 }
 #left-filter {
   padding: 0 30px 0 30px;
@@ -26,7 +27,6 @@
   padding: 0 30px 0 30px;
 }
 .search-input {
-  flex: 0 1 300px;
   transition: all 0.15s ease;
   line-height: 40px;
   font-weight: lighter;
@@ -37,6 +37,12 @@
   margin: 5px;
   font-size: 14px;
   outline: none;
+}
+.full-input {
+  width: 100%;
+}
+.half-input {
+  width: 50%;
 }
 #filter-button {
   margin-top: 5px;
@@ -55,6 +61,39 @@
   outline: none;
   height: 40px;
 }
+.filter-row {
+  height: 52px;
+}
 .form-group {
   display: inline;
+}
+.option-flex {
+  display: flex;
+  align-items: center;
+}
+.label-option {
+  flex: 0 0 25%;
+}
+.label-option-small {
+  flex: 0 0 20%;
+}
+.label-option-large {
+  flex: 0 0 40%;
+}
+.slider-values {
+  flex: 0 0 15%;
+}
+.slider-values-text {
+  border: 0;
+  color: $blue;
+  font-size: 14px;
+}
+.slider-bar {
+  flex: 1 1 auto;
+}
+.slider-addon {
+  flex: 0 0 30%;
+}
+.slider-margin {
+  flex: 0 0 5%;
 }
