--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= yield %>
 <!--     <%= render 'shared/footer' %> -->
 
-    <%= javascript_include_tag "https://maps.google.com/maps/api/js?sensor=false" %>
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyDTZBXNT05Uq6fgWRJnpGeFvENz6c-8qxw" %>
     <%= javascript_include_tag "https://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" %>
 
     <%= javascript_include_tag 'application' %>
