--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,10 +23,11 @@
           <div class = "dates">
             <h1 class="btn btn-primary col-xs-6">Choisir mes dates <br><i class="fa fa-calendar"></i></h1>
             <h4 class="col-xs-6">Dates recherchées :
-            <input type="textarea text-center" class="form-control col-xs-6"></h4>
+          <span><input type="textarea" class="form-control text-center col-xs-6"></h4></span>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
