calendar-front-ok

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
-// @import "jquery-ui";
+@import "jquery-ui";
 // @import "jquery-ui/datepicker";
 @import "bootstrap-datepicker";
 @import "font-awesome-sprockets";
