--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div id="calendar" class="col-xs-12 col-md-9 text-center">
-      <div class="datepick date ">
+<!--       <div class="datepick date ">
         <div class="input-group">
           <div class = "dates">
             <h1 class="btn btn-primary col-xs-6">Choisir mes dates <br><i class="fa fa-calendar"></i></h1>
@@ -26,10 +26,11 @@
           <span><input type="textarea" class="form-control text-center col-xs-6"></h4></span>
           </div>
         </div>
-      </div>
-
+      </div> -->
+              <div id="demo"></div>
     </div>
   </div>
+
 
   <div class="row">
     <div id="user_content" class="col-xs-12 col-md-8 text-justify">
