First cards and map working

--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -6,6 +6,10 @@
   width: 50px;
   border-radius: 50%;
 }
+.avatar-xxl {
+  width: 110px;
+  border-radius: 50%;
+}
 .avatar-bordered {
   width: 30px;
   border-radius: 50%;
