--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -28,7 +28,7 @@ $brand-color: #D23333;
 
 $red: #EE5F5B;
 $blue: #00AFC3;
-$yellow: #FDB631;
+$yellow: #FFB500;
 $orange: #E67E22;
 $green: #26B35E;
 
