Fixed bugged CSS

--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -1,6 +1,6 @@
-// .page-content {
-//   margin-top: 70px;
-// }
+.page-content {
+  margin-top: 75px;
+}
 .hide-filter {
   width: 100%;
   height: 17px;
