--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,5 @@
 // Cards in search results
 .card-user {
-<<<<<<< HEAD
   height: 150px;
   display: flex;
   align-items: center;
@@ -19,7 +18,7 @@
 }
 .fa-gray {
   color: $gray-lighter;
-
+}
 // Cards in home page
 .card {
   border-radius: 7px;
