--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -7,7 +7,7 @@
             <div class="col-xs-12 col-sm-4">
               <div class="row-fluid">
                 <div class="col-xs-12">
-                  <input class="search-input full-input" placeholder="Ville ou adresse" name="location" id="user_input_autocomplete_address">
+                  <input class="search-input full-input" placeholder="Ville ou adresse" name="location" id="user_input_autocomplete_address" value="<%= @location %>">
                 </div>
               </div>
               <div class="row-fluid">
@@ -106,6 +106,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 text-center hide-filter">
+
           <span class="hide-arrow"><i class="fa fa-arrow-circle-o-up align-center"></i></span>
           <span class="hide-arrow hidden"><i class="fa fa-arrow-circle-o-down align-center"></i></span>
         </div>
@@ -114,7 +115,6 @@
         <div class="col-xs-12 text-center hide-filter" style="box-shadow: none;">
         </div>
       </div>
-
 
       <div class="row">
         <div class="col-xs-12 col-sm-8">
@@ -136,7 +136,9 @@
                         <% end %>
                       </div>
                       <div class="card-content-left">
-                        <h4>Dr. <%= user.first_name %>  <%= user.last_name %></h4>
+                        <h4>Dr. <%= user.first_name %>  <%= user.last_name %>
+<%= user.id %>
+                        </h4>
                         <% if user.reviews.size > 0 %>
                           <h4>
                             <%= ("<i class='fa fa-star fa-yellow'></i>" * user.reviews.average(:rating).to_f.round).html_safe %>
@@ -160,16 +162,29 @@
         <div class="hidden-xs col-sm-4 no-padding map">
           <div id="map" style="position: fixed;"></div>
           <% content_for(:after_js) do %>
-            <%= javascript_tag do %>
+            <script> <%#= javascript_tag do %>
               $(document).on('ready', function() {
                 handler = Gmaps.build('Google');
                 handler.buildMap({ internal: { id: 'map' } }, function(){
                   markers = handler.addMarkers(<%= raw @markers.to_json %>);
+
+                  (<%=raw @markers.to_json %>).forEach(function(json, index){
+                    json.marker = markers[index];
+
+                    $(".user-" + json.id).on('mouseenter', function() {
+                      console.log("mouse over");
+                      handler.getMap().setZoom(14);
+                      json.marker.setMap(handler.getMap()); //because clusterer removes map property from marker
+                      json.marker.panTo();
+                      google.maps.event.trigger(json.marker.getServiceObject(), 'click');
+                    });
+                  });
+
                   handler.bounds.extendWith(markers);
                   handler.fitMapToBounds();
                 });
-              })
-            <% end %>
+              });
+            </script> <%# end %>
           <% end %>
         </div>
       </div>
