--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="page-content padded">
     <div class="container-fluid main">
-      <div id="search-filter">
+<!--       <div id="search-filter">
         <form action="/search">
           <div class="row">
             <div class="col-xs-12 col-sm-4">
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-xs-12 text-center hide-filter" style="box-shadow: none;">
         </div>
-      </div>
+      </div> -->
 
       <div class="row">
         <div class="col-xs-12 col-sm-8">
@@ -136,9 +136,7 @@
                         <% end %>
                       </div>
                       <div class="card-content-left">
-                        <h4>Dr. <%= user.first_name %>  <%= user.last_name %>
-<%= user.id %>
-                        </h4>
+                        <h4>Dr. <%= user.first_name %>  <%= user.last_name %></h4>
                         <% if user.reviews.size > 0 %>
                           <h4>
                             <%= ("<i class='fa fa-star fa-yellow'></i>" * user.reviews.average(:rating).to_f.round).html_safe %>
@@ -164,6 +162,15 @@
           <% content_for(:after_js) do %>
             <script> <%#= javascript_tag do %>
               $(document).on('ready', function() {
+
+                hoverPicture = {
+                url: "<%= asset_path 'marker_blue_small.png' %>",
+                width: 33,
+                height: 33
+                };
+
+                console.log(hoverPicture);
+
                 handler = Gmaps.build('Google');
                 handler.buildMap({ internal: { id: 'map' } }, function(){
                   markers = handler.addMarkers(<%= raw @markers.to_json %>);
@@ -172,10 +179,11 @@
                     json.marker = markers[index];
 
                     $(".user-" + json.id).on('mouseenter', function() {
-                      console.log("mouse over");
+                      console.log(json);
+                      // marker.setIcon(<%= image_path 'marker_blue' %>);
                       handler.getMap().setZoom(14);
-                      json.marker.setMap(handler.getMap()); //because clusterer removes map property from marker
-                      json.marker.panTo();
+                      // json.marker.setMap(handler.getMap()); //because clusterer removes map property from marker
+                      // json.marker.panTo();
                       google.maps.event.trigger(json.marker.getServiceObject(), 'click');
                     });
                   });
