--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
       <%= form_tag(user_slots_path(@user), :method => :post ) do -%>
       <input id="startDate" name="start_date" type="hidden" value="" />
       <input id="endDate" name="end_date" type="hidden" value="" />
-      <input id ="sendDates"name='commit' type='submit' class ="btn btn-primary text-center" value='Valider dates pour cette plage de dates'/>
+      <input id ="sendDates"name='commit' type='submit' class ="btn btn-primary text-center" value='Valider cette plage de dates'/>
       <% end -%>
 
 
