--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container" id = "user_container">
   <div class="row">
 
-    <div id="demo">
+<!--     <div id="demo">
     </div>
 
       <%= form_tag(user_slots_path(@user), :method => :post ) do -%>
       <input id="startDate" name="start_date" type="hidden" value="" />
       <input id="endDate" name="end_date" type="hidden" value="" />
       <input id ="sendDates"name='commit' type='submit' class ="btn btn-primary text-center" value='Valider cette plage de dates'/>
-      <% end -%>
+      <% end -%> -->
 
 
 
