--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,27 @@
 <div class="container">
-  <div class="row text-center">
-  <h2>Inscription</h2>
-    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= f.error_notification %>
-
-      <div class="form-inputs">
-        <%= f.input :email, required: true, autofocus: true %>
-        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-        <%= f.input :password_confirmation, required: true %>
+  <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
+    <div class="form-design background">
+      <div class="text-center" id="form_title">
+        <h2>Inscription</h2>
       </div>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
 
-      <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
-      </div>
-    <% end %>
+          <div class="form-inputs">
+            <%= f.input :first_name, required: true %>
+            <%= f.input :last_name, required: true %>
+            <%= f.input :has_practice, collection: [['un remplaçant', true], ['un remplacement', false]] %>
+            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+            <%= f.input :password_confirmation, required: true %>
+          </div>
 
-    <%= render "devise/shared/links" %>
+          <div class="form-actions text-center">
+            <%= f.button :submit, "Sign up", :class => 'btn btn-primary', style: "width: 100%;" %>
+          </div>
+
+        <% end %>
+        <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
-
-
